# victor-mel-godcore

./: .gitignore  README.md  pyproject.toml  run_demo.py
docs/: QUICKSTART.md
examples/: educational_mel_demo.py
src/victor_mel/: __init__.py
src/victor_mel/algorithms/: __init__.py  base.py  pfeho.py
src/victor_mel/mel/: __init__.py  flywheel.py  mel_controller.py  resonant_coupler.py
src/victor_mel/primitives/: __init__.py  energy_auditor.py  resonance.py
tests/: test_energy_balance.py
